--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,9 +1,20 @@
 {
   "name": "safeswap-frontend",
-  "private": true,
   "version": "1.0.0",
+  "private": true,
   "description": "SafeSwap Frontend - React + Vite",
+  "keywords": [
+    "react",
+    "vite",
+    "safeswap",
+    "defi",
+    "aptos",
+    "token-swap"
+  ],
+  "license": "MIT",
+  "author": "RTS Team",
   "type": "module",
+  "main": "eslint.config.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -35,15 +46,5 @@
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.0",
     "vite": "^4.4.0"
-  },
-  "keywords": [
-    "react",
-    "vite",
-    "safeswap",
-    "defi",
-    "aptos",
-    "token-swap"
-  ],
-  "author": "RTS Team",
-  "license": "MIT"
+  }
 }
