--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,14 +6,22 @@
     "typescript.workspaceSymbols.enabled": false,
     "typescript.implementationsCodeLens.enabled": false,
     "typescript.referencesCodeLens.enabled": false,
+    "typescript.tsc.autoDetect": "off",
+    "typescript.preferences.detectTypeImports": false,
+    "typescript.format.enable": false,
+    "typescript.check.npmIsInstalled": false,
     "files.exclude": {
         "**/*.d.ts": true,
         "**/node_modules/**": true
     },
-    "typescript.tsc.autoDetect": "off",
-    "typescript.preferences.detectTypeImports": false,
     "search.exclude": {
         "**/node_modules": true,
         "**/*.d.ts": true
+    },
+    "files.associations": {
+        "*.js": "javascript"
+    },
+    "emmet.includeLanguages": {
+        "javascript": "javascript"
     }
 }
