--- a/Backend/.env
+++ b/Backend/.env
@@ -1,31 +1,8 @@
-# MongoDB Configuration - Atlas (Cloud)
-MONGODB_URI=mongodb+srv://safeswap_user:12345@safeswap.6pk7wds.mongodb.net/safeswap?retryWrites=true&w=majority&appName=SafeSwap
-
-# JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-JWT_EXPIRES_IN=7d
-
-# Server Configuration
-PORT=3000
 NODE_ENV=development
-
-# CORS Configuration
-ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
-
-# Rate Limiting
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
-
-# Aptos Configuration
-APTOS_NETWORK=devnet
-APTOS_NODE_URL=https://fullnode.devnet.aptoslabs.com/v1
-
-# WebSocket Configuration
-WS_PORT=3001
-
-# Price Feed Configuration
-PRICE_UPDATE_INTERVAL=30000
-
-# Scam Detection Configuration
-SCAM_DETECTION_ENABLED=true
-SUSPICIOUS_THRESHOLD=0.7
+PORT=5000
+MONGODB_URI=mongodb+srv://safeswap_useruser:12345@safeswap.6pk7wds.mongodb.net/safeswap?retryWrites=true&w=majority&appName=SafeSwap
+JWT_SECRET=a_secure_secret_for_development
+JWT_REFRESH_SECRET=another_secure_secret_for_development
+JWT_EXPIRES_IN=1h
+JWT_REFRESH_EXPIRES_IN=7d
+CORS_ORIGIN=http://localhost:5173
