--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=5000
-MONGODB_URI=mongodb+srv://safeswap_useruser:12345@safeswap.6pk7wds.mongodb.net/safeswap?retryWrites=true&w=majority&appName=SafeSwap
+MONGODB_URI=mongodb+srv://safeswap_user:12345@safeswap.6pk7wds.mongodb.net/safeswap?retryWrites=true&w=majority&appName=SafeSwap
 JWT_SECRET=a_secure_secret_for_development
 JWT_REFRESH_SECRET=another_secure_secret_for_development
 JWT_EXPIRES_IN=1h
