--- a/Backend/.env
+++ b/Backend/.env
@@ -1,8 +1,8 @@
-NODE_ENV=development
-PORT=5000
 MONGODB_URI=mongodb+srv://safeswap_user:12345@safeswap.6pk7wds.mongodb.net/safeswap?retryWrites=true&w=majority&appName=SafeSwap
+PORT=5000
+NODE_ENV=development
 JWT_SECRET=a_secure_secret_for_development
 JWT_REFRESH_SECRET=another_secure_secret_for_development
 JWT_EXPIRES_IN=1h
 JWT_REFRESH_EXPIRES_IN=7d
-CORS_ORIGIN=http://localhost:5173
+CORS_ORIGIN=http://localhost:5173,http://localhost:5174
