--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
+  "name": "safeswap-token",
+  "version": "1.0.0",
+  "description": "SafeSwap Token Exchange Platform",
+  "main": "index.js",
+  "scripts": {
+    "start": "cd Backend && npm start",
+    "start:frontend": "cd Frontend && npm run dev",
+    "start:backend": "cd Backend && npm start",
+    "dev": "concurrently \"npm run start:frontend\" \"npm run start:backend\""
+  },
   "dependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.10",
-    "bcryptjs": "^3.0.2",
-    "jsonwebtoken": "^9.0.2"
+    "concurrently": "^8.2.2"
   }
 }
